--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,3 +15,8 @@ kemi:
     models:
       - gemini-2.5-flash
       - gemini-2.5-flash-lite
+
+    # List of Gemini image generation models (fallback in order)
+    image-models:
+      - gemini-2.5-flash-image
+      - gemini-3-pro-image-preview
